# shadowdark-mkchar

./: .gitignore  Cargo.toml  Makefile  README.md
lang/: en.json  ru.json  ru_short.json
res/: inputs-sample.typ  ru.json  template.typ
res/Hermann Gotisch/: COPYRIGHT.txt
res/Kereru/: COPYRIGHT.txt
src/: alignment.rs  ancestry.rs  args.rs  background.rs  class.rs  deities.rs  inventory.rs  langpack.rs  lib.rs  main.rs  spell.rs  stats.rs  template.rs  translation.rs
src/ancestry/: mod.rs
src/class/: mod.rs
