[package]
name = "shadowdark-mkchar"
version = "2.0.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
derive_typst_intoval = "0.3.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
typst = "0.13.1"
typst-as-lib = "0.14.1"
typst-pdf = "0.13.1"
